# fluid-practice

./: CMakeLists.txt  README.md  kernel.cu  kernel.cuh  main.cpp  taichi.h
